feat: add handler and database layer
